--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "groupchatapp",
+  "name": "chatapp",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -10,15 +10,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.5",
     "router": "^1.3.8",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
